syntax = "proto3";

package bot.events.karaoke.v1;

import "google/protobuf/wrappers.proto";
import "types/crud/v1/crud.proto";

message KaraokeScheduledEvent {
  string voice_channel_id = 1;
  string text_channel_id = 2;
  string discord_event_id = 3;
  google.protobuf.StringValue role_id = 4;
}

message GetKaraokeScheduledEventsRequest {
  string guild_id = 1;
}

message GetKaraokeScheduledEventsResponse {
  repeated KaraokeScheduledEvent events = 1;
}

message UpdateKaraokeScheduledEventRequest {
  string guild_id = 1;
  string voice_channel_id = 2;
  types.crud.v1.RequiredString text_channel_id = 3;
  types.crud.v1.RequiredString discord_event_id = 4;
  types.crud.v1.OptionalString role_id = 5;
}

message UpdateKaraokeScheduledEventResponse {
  KaraokeScheduledEvent event = 1;
}

message DeleteKaraokeScheduledEventRequest {
  string guild_id = 1;
  string voice_channel_id = 2;
}

message DeleteKaraokeScheduledEventResponse {
  KaraokeScheduledEvent event = 1;
}

service KaraokeEventService {
  rpc GetKaraokeScheduledEvents(GetKaraokeScheduledEventsRequest) returns (GetKaraokeScheduledEventsResponse);
  rpc UpdateKaraokeScheduledEvent(UpdateKaraokeScheduledEventRequest) returns (UpdateKaraokeScheduledEventResponse);
  rpc DeleteKaraokeScheduledEvent(DeleteKaraokeScheduledEventRequest) returns (DeleteKaraokeScheduledEventResponse);
}
